server/compilers/goLiteJS/src/test/ml1/valid/top12.go
// top level declaration permutations
package main

func f(){}

type num int
