server/compilers/goLiteJS/src/test/ml1/invalid/func12.go
// missing curly braces
package main

func f()
    return
